2003-10-09  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_create): Check whole length of image, not just 
	effective size, when validating addresses.

	* src/net/net_io.c (net_init): 
	* include/net/net.h: Rework handling of multiple network devices.  All
	devices will now be initialized, with either the first or the default
	device actually used for I/O.

2003-10-06  Gary Thomas  <gary@mlbassoc.com>

	* src/net/net_io.c: 
	* src/net/bootp.c: Fix some compile problems if GATEWAY support is disabled.

	* src/flash.c (fis_list): Display FIS directory entries in FLASH
	address (sorted) order.

2003-10-03  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_delete): 'fconfig' data only shows up in FIS if
	the data is stored in FLASH - account for this.  Also, make sure 
	FLASH gets initialized if built without 'fconfig' enabled.

2003-10-02  Gary Thomas  <gary@mlbassoc.com>

	* src/fconfig.c: 
	* cdl/redboot.cdl: Allow platforms to provide a function to validate
	ethernet station addresses.

2003-09-30  Gary Thomas  <gary@mlbassoc.com>

	* src/fconfig.c (do_flash_config): Fix typo in error message.

2003-09-30  David Vrabel  <dvrabel@arcom.com>

        * src/net/tcp.c: Include missing <cyg/infra/diag.h>.

        * include/redboot.h, src/parse.c (init_opts, scan_opts): Remove
        the excessive level of indirection in the handling of option
        arguments.
	
2003-09-29  Gary Thomas  <gary@mlbassoc.com>

	* src/load.c (load_elf_image): Use LMA (loader memory address), instead
	of VMA (virtual memory address) to load code.  If LMA != VMA, it's up
	to the loaded program to figure it out.  
	Inspired by Artur Lipowski <LAL@pro.onet.pl>

2003-09-26  Nick Garnett  <nickg@balti.calivar.com>

	* doc/redboot_installing.sgml: Fixed bogus memory sizes in AT91
	EB42/55 description.

2003-09-26  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c (fis_free, fis_find_free): 
	Fix some problems introduced with the new FLASH interfaces (used by 
	NAND devices)
